# CoupleLoc

./: .gitignore  Delpoyment.md  Dev.md  Product.md  README.md  TODO.md  docker-compose.yml
docs/: database-design.md
mobile/: .env.example  App.tsx  app.config.js  eas.json  package-lock.json  package.json  tsconfig.json
mobile/assets/stitch_sweet_trace_map/_1/: code.html
mobile/assets/stitch_sweet_trace_map/_2/: code.html
mobile/assets/stitch_sweet_trace_map/_3/: code.html
mobile/assets/stitch_sweet_trace_map/_4/: code.html
mobile/assets/stitch_sweet_trace_map/_5/: code.html
mobile/src/: theme.ts  types.ts
mobile/src/api/: client.ts
mobile/src/components/: HeartlineUI.tsx  SafeScreen.tsx
mobile/src/config/: env.ts
mobile/src/screens/: AuthScreen.tsx  CalendarScreen.tsx  ChatScreen.tsx  MainScreen.tsx  MemoriesScreen.tsx  PairingScreen.tsx  ProfileScreen.tsx  TrackerScreen.tsx
mobile/src/services/: amap.ts  location.ts
mobile/src/types/: react-native-amap3d.d.ts
mobile/src/utils/: coordinates.ts
server/: .env.example  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_shared_features.py  0003_sharing_privacy_options.py  0004_sms_auth.py  0005_pairing_requests.py
server/app/: main.py  models.py  schemas.py
server/app/api/: deps.py
server/app/api/routes/: auth.py  calendar.py  chat.py  locations.py  memories.py  pairing.py  ws.py
server/app/core/: config.py  security.py
server/app/db/: session.py
server/app/services/: connection_manager.py  pairing.py  sms.py
(+6 files in other folders)
