[project]
name = "coupleloc-server"
version = "0.1.0"
description = "FastAPI backend for CoupleLoc"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]  # 告诉它只打包 app 文件夹及其子包
exclude = ["alembic*"] # 明确排除 alembic